# gisharp

./: .editorconfig  .gitignore  .travis.yml  Core.csproj  GISharp.sln  GLib-2.0.girfixup  LICENSE.txt  diff-docs.sh  girfixup-file-format.md  global.json  nuget.config  omnisharp.json  run-coverage.sh  run-tests.sh  update-doc.sh  update-generated.sh
.config/: dotnet-tools.json
.nuget/: packages.config
Browser/: Browser.csproj  GITreeModelImplmentor.cs  InfoTreeModelImpl.cs  InfoTypeEventArgs.cs  MainWindow.cs  Program.cs  RepositoryManager.cs
CodeGen/: CodeGen.csproj  CodeWriter.cs  Fixup.cs  GLib.fixup.yaml  GLib.yaml  GObject.fixup.yaml  GirArrayType.cs  GirByRefType.cs  GirConstructorInfo.cs  GirFieldInfo.cs  GirGenericType.cs  GirMethodInfo.cs  GirParameterInfo.cs  GirPropertyInfo.cs  GirType.cs  Globals.cs  IGirInfo.cs  Program.cs  TypeResolver.cs  packages.config
Core/: Array.cs  BindingFlags.cs  ByteArray.cs  CallbackCache.cs  Core.csproj  Core.dll.config  Default.cs  Delegates.cs  DynamicLibrary.cs  Enum.cs  Flags.cs  (+30 more)
Core.Test/: ArrayTest.cs  BindingFlagsTest.cs  ByteArrayTest.cs  Core.Test.csproj  EnumTest.cs  FlagsTest.cs  GTypeTest.cs  HashTableTest.cs  Helpers.cs  IListTests.cs  ListTest.cs  ObjectTest.cs  Program.cs  PtrArrayTest.cs  SListTest.cs  Setup.cs  TestInterfaces.cs  TestOpaque.cs  TestWrappedNative.cs  Utility.cs  ValueTest.cs  project.json
Core.Test.Runner/: Core.Test.Runner.csproj  Program.cs
Everything-1.0.CMake/: CMakeLists.txt  Everything-1.0.CMake.mdproj
Everything-1.0.CMake/cmake/: FindGirCompiler.cmake  FindGirScanner.cmake
(+3377 files in other folders)
